test/fail/shadowGlobal.ma
-- 2012-01-27 shadowing of globals not allowed
let bla : Size = 0
let bla : Size = 0
